

phpVMS Build Changelog:

Build 279

  * Pilot ranks - Add ranks, system calculates hours on PIREP approval, or addition of new ranks
  * Pilot profile shows rank, hours until the next rank
  * Add custom field to popup
  * Settings Form fixed
  * Custom fields form
  * User session had old data, updates on page refresh
  * Add News form fixed
  * Display enhancements
  
Build 277

  * Charts show up on Dashboard (Module based), for some rudimentary stats (more coming)
  * Google Map shows route on "View Report" page
  * Accept/Reject PIREPs in Admin Panel (after accept, adds total flights/hours)
  * About page in Admin Panel
  * Database tables changed to InnoDB, show some respect to the FK and integrity =D
  * "SET FOREIGN_KEY_CHECKS=1;" to compensate for host-specific settings
  * PIREP list view enhancements
  * Definition lists heights evened out
  * "New Version" available message, fixed to show only on main page
  * Design enhancements

Build 258

  - fixed #15
  - fixed #58
  - fixed #57
  - refs #39 - PIREP comments added, sends email

  * Add comments to PIREP (from Admin Panel), sends email to submitter with the comment,
    and link back to view the comment. Submitter can then reply to any inquiry, and
    then the report can be accepted/rejected based on that.
  * Show comments in 'View Report' page
  * Show unaccepted reports in admin panel (new entry in navigation)
  * New crystal theme, with sidebar instead of top navigation (default admin theme)
  * Added Google Maps API key into settings for future (in table SQL)
  * Custom Fields have "title" field, which shows, which is converted into the formal name
    Required alteration in table
  * Name capitalization on Registration
  * Template HTML cleaned up
  * Wording fixes
  * Core bug fixes (database connector fixes)
  * Templates were showing incorrectly in installer


=====
http://www.phpvms.net