@@ -103,15 +103,15 @@ h3
 
 #mainbox
 {
-	width: 640px;
+	width: 580px;
 	float: left;
 }
 
 #sidebar
 {
-	float: right;
-	width: 300px;
-	clear: right;
+	float: left;
+	width: 350px;
+	
 }
 
 #messagebox
